# udp-mangler

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml  dist-workspace.toml
.github/workflows/: publish.yaml
udp_mangler/: Cargo.toml  README.md
udp_mangler/src/: forward.rs  lib.rs  listen.rs  mangle.rs
udp_mangler_cli/: Cargo.toml  README.md
udp_mangler_cli/src/: args.rs  main.rs
udp_mangler_gui/: Cargo.toml  README.md
udp_mangler_gui/src/: initialized.rs  main.rs  uninitialized.rs
