[workspace]
resolver = "3"
members = ["udp_mangler", "udp_mangler_cli", "udp_mangler_gui"]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.93.1"
authors = ["Wouter de Bruijn <wouter@wutru.io>"]
homepage = "https://github.com/cloone8/udp-mangler"
repository = "https://github.com/cloone8/udp-mangler"
license = "MPL-2.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[workspace.dependencies]
udp_mangler = { version = "1.0.0", path = "udp_mangler" }

# Lib packages
log = { version = "0.4" }
derive_more = { version = "2" }
rand = { version = "0.10" }
arc-swap = { version = "1" }

# CLI dependencies
clap = { version = "4" }
simplelog = { version = "0.12" }
ctrlc = { version = "3" }

# GUI dependencies
eframe = { version = "0.33" }

[workspace.lints.rust]
# Groups
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }

# Individual lints
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
missing_assert_messages = "warn"
missing_docs_in_private_items = "warn"
missing_assert_message = "warn"
allow_attributes_without_reason = "warn"
std_instead_of_core = "warn"
too_many_lines = "warn"
unused_self = "warn"
mutex_integer = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
borrow_as_ptr = "warn"
doc_broken_link = "warn"
empty_drop = "warn"
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
infinite_loop = "warn"
verbose_file_reads = "warn"
unneeded_field_pattern = "warn"
unimplemented = "warn"
todo = "warn"
suspicious_operation_groupings = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
needless_raw_strings = "warn"
mod_module_files = "deny"
missing_fields_in_debug = "warn"
