[package]
name = "udp_mangler"
description = "A library for simulating various network conditions for UDP sockets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display", "error"] }
log = { workspace = true }
rand = { workspace = true }
arc-swap = { workspace = true }
