[package]
name = "udp_mangler_gui"
description = "GUI for UDP Mangler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
udp_mangler.workspace = true
eframe = { workspace = true, features = ["wgpu"] }
